syntax = "proto3";
package proto;

import "google/api/annotations.proto";

message HelloWorldRequest {
    string referer = 1;
}

message ApiResponse {
    int32 code = 1;
    string msg = 2;
    enum Data {
       HelloWorldResponse = 0;
       Tmp = 1;
    }
    Data data = 3;
}

message HelloWorldResponse {
    int32 id = 1;
}

message Tmp {
    string name = 1;
}

service HelloWorld {
    rpc SayHelloWorld(HelloWorldRequest) returns (ApiResponse) {
        option (google.api.http) = {
            post: "/hello_world"
            body: "*"
        };
    }
}